[gd_scene load_steps=4 format=3 uid="uid://b40dft28kfs0l"]

[ext_resource type="Script" path="res://menu.gd" id="1_s84qu"]

[sub_resource type="Theme" id="Theme_4eh0p"]

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_fnog3"]

[node name="menu" type="Node2D"]
script = ExtResource("1_s84qu")

[node name="Button" type="Button" parent="."]
offset_left = 216.0
offset_top = 177.0
offset_right = 942.0
offset_bottom = 266.0
text = "play"

[node name="Button2" type="Button" parent="."]
offset_left = 153.0
offset_top = 272.0
offset_right = 1000.0
offset_bottom = 484.0
text = "quit
"

[node name="text" type="TextEdit" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 440.0
offset_top = 55.0
offset_right = 709.0
offset_bottom = 157.0
grow_horizontal = 2
theme = SubResource("Theme_4eh0p")
text = "tht ra ở đây kh có game nào chs
thís box have the screct in side
:>> kh co game nao dau :>>>"
placeholder_text = "bạn muốn chơi đến v sao ;))
thôi được :>"
editable = false
highlight_all_occurrences = true
highlight_current_line = true
syntax_highlighter = SubResource("SyntaxHighlighter_fnog3")

[node name="Button3" type="Button" parent="."]
offset_left = 754.0
offset_top = 72.0
offset_right = 993.0
offset_bottom = 139.0
text = "real play button"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="script_changed" from="text" to="." method="_on_text_script_changed"]
[connection signal="text_changed" from="text" to="." method="_on_text_text_changed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
